@@ -1,5 +1,6 @@
 package com.finderfeed.fdlib;
 
+import com.finderfeed.fdlib.network.FDPacketHandler;
 import com.finderfeed.fdlib.network.lib_packets.PlayerMovePacket;
 import com.finderfeed.fdlib.systems.cutscenes.CutsceneData;
 import com.finderfeed.fdlib.systems.cutscenes.packets.MoveCutsceneCameraPacket;
@@ -22,7 +23,8 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
-import net.minecraftforge.neoforge.network.PacketDistributor;
+import net.minecraftforge.network.NetworkDirection;
+import net.minecraftforge.network.PacketDistributor;
 
 import java.util.Arrays;
 import java.util.List;
@@ -33,27 +35,27 @@ public class FDLibCalls {
     public static final TargetingConditions ALL = TargetingConditions.forNonCombat().selector(p->true).ignoreLineOfSight().ignoreInvisibilityTesting();
 
     public static void startCutsceneForPlayer(ServerPlayer player, CutsceneData data){
-        PacketDistributor.sendToPlayer(player,new StartCutscenePacket(data));
+        FDPacketHandler.INSTANCE.sendTo(new StartCutscenePacket(data), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
     public static void startCutsceneForPlayers(ServerLevel level,Vec3 pos,double radius, CutsceneData data){
-        PacketDistributor.sendToPlayersNear(level,null,pos.x,pos.y,pos.z,radius,new StartCutscenePacket(data));
+        FDPacketHandler.INSTANCE.send(PacketDistributor.NEAR.with(()->new PacketDistributor.TargetPoint(pos.x,pos.y,pos.z,radius,level.dimension())),new StartCutscenePacket(data));
     }
 
     public static void moveCutsceneCameraForPlayer(ServerPlayer player, CutsceneData data){
-        PacketDistributor.sendToPlayer(player,new MoveCutsceneCameraPacket(data));
+        FDPacketHandler.INSTANCE.sendTo(new MoveCutsceneCameraPacket(data), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
     public static void moveCutsceneCameraForPlayers(ServerLevel level,Vec3 pos,double radius, CutsceneData data){
-        PacketDistributor.sendToPlayersNear(level,null,pos.x,pos.y,pos.z,radius,new MoveCutsceneCameraPacket(data));
+        FDPacketHandler.INSTANCE.send(PacketDistributor.NEAR.with(()->new PacketDistributor.TargetPoint(pos.x,pos.y,pos.z,radius,level.dimension())),new MoveCutsceneCameraPacket(data));
     }
 
     public static void stopCutsceneForPlayer(ServerPlayer player){
-        PacketDistributor.sendToPlayer(player,new StopCutscenePacket());
+        FDPacketHandler.INSTANCE.sendTo(new StopCutscenePacket(), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
     public static void stopCutsceneForPlayers(ServerLevel level,Vec3 pos,double radius){
-        PacketDistributor.sendToPlayersNear(level,null,pos.x,pos.y,pos.z,radius,new StopCutscenePacket());
+        FDPacketHandler.INSTANCE.send(PacketDistributor.NEAR.with(()->new PacketDistributor.TargetPoint(pos.x,pos.y,pos.z,radius,level.dimension())),new StopCutscenePacket());
     }
 
     public static <T> T getListValueSafe(int id,List<T> list){
@@ -75,9 +77,9 @@ public class FDLibCalls {
         }
 
         if (id < 0){
-            return list.getFirst();
+            return list.get(0);
         }else if (id >= list.size()){
-            return list.getLast();
+            return list.get(list.size() - 1);
         }
 
         return list.get(id);
@@ -85,23 +87,23 @@ public class FDLibCalls {
 
     public static void addParticleEmitter(Level level, double sendRadius, ParticleEmitterData data){
         if (level instanceof ServerLevel serverLevel) {
-            PacketDistributor.sendToPlayersNear(serverLevel, null, data.position.x, data.position.y, data.position.z, sendRadius, new ParticleEmitterPacket(data));
+            FDPacketHandler.INSTANCE.send(PacketDistributor.NEAR.with(()->new PacketDistributor.TargetPoint(data.position.x, data.position.y, data.position.z, sendRadius,level.dimension())),new ParticleEmitterPacket(data));
         }else{
             ParticleEmitterHandler.addParticleEmitter(data);
         }
     }
 
     public static void addParticleEmitter(ServerPlayer player,ParticleEmitterData data){
-        PacketDistributor.sendToPlayer(player, new ParticleEmitterPacket(data));
+        FDPacketHandler.INSTANCE.sendTo(new ParticleEmitterPacket(data), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
     public static void sendImpactFrames(ServerLevel level, Vec3 point,float sendRadius, ImpactFrame... frames){
-        PacketDistributor.sendToPlayersNear(level,null,point.x,point.y,point.z,sendRadius,new ImpactFramesPacket(Arrays.stream(frames).toList()));
+        FDPacketHandler.INSTANCE.send(PacketDistributor.NEAR.with(()->new PacketDistributor.TargetPoint(point.x,point.y,point.z,sendRadius,level.dimension())),new ImpactFramesPacket(Arrays.stream(frames).toList()));
     }
 
     public static void setServerPlayerSpeed(ServerPlayer player,Vec3 deltaMovement){
         player.setDeltaMovement(deltaMovement);
-        PacketDistributor.sendToPlayer(player,new PlayerMovePacket(deltaMovement));
+        FDPacketHandler.INSTANCE.sendTo(new PlayerMovePacket(deltaMovement), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
 
@@ -124,11 +126,11 @@ public class FDLibCalls {
     }
 
     public static <D extends ScreenEffectData, T extends ScreenEffect<D>> void sendScreenEffect(ServerPlayer player, ScreenEffectType<D,T> type, D data, int inTime, int stayTime, int outTime){
-        PacketDistributor.sendToPlayer(player, new SendScreenEffectPacket<>(data, type, inTime, stayTime, outTime));
+        FDPacketHandler.INSTANCE.sendTo(new SendScreenEffectPacket<>(data, type, inTime, stayTime, outTime), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
     public static <D extends ScreenEffectData, T extends ScreenEffect<D>> void sendScreenEffect(ServerPlayer player, Supplier<ScreenEffectType<D, T>> type, D data, int inTime, int stayTime, int outTime){
-        PacketDistributor.sendToPlayer(player, new SendScreenEffectPacket<>(data, type.get(), inTime, stayTime, outTime));
+        FDPacketHandler.INSTANCE.sendTo(new SendScreenEffectPacket<>(data, type.get(), inTime, stayTime, outTime), player.connection.connection, NetworkDirection.PLAY_TO_CLIENT);
     }
 
 }
